@@ -1,3 +1,9 @@
+*raspberrypi-image-3.12.36_pre-r20150206 (01 Apr 2015)
+
+  01 Apr 2015; Michael Weber <xmw@gentoo.org>
+  +raspberrypi-image-3.12.36_pre-r20150206.ebuild:
+  Version bump
+
 *raspberrypi-image-3.12.31_pre-r20141106 (01 Apr 2015)
 *raspberrypi-image-3.18.10_pre-r20150330 (01 Apr 2015)
 *raspberrypi-image-3.19.3_pre-r20150327 (01 Apr 2015)
